# cpp-huffman

./: CMakeLists.txt  main.cpp  test.cpp
libhuffman/: CMakeLists.txt  library.cpp  library.h
